[package]
name = "dynamic_piano_sheet"
version = "0.1.0"
edition = "2024"
description = "Dynamic sheet music for piano performance"
repository = "https://github.com/t0k0na2/dynamic-piano-sheet"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
midly = "0.5"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "File",
    'AudioContext',
    'AudioNode',
    'AudioParam',
    'AudioDestinationNode',
    'OscillatorNode',
    'OscillatorType',
    'GainNode',
    'BiquadFilterNode',
    'BiquadFilterType',
    'DynamicsCompressorNode',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
